2013-11-02  Araki Ken  <arakiken@users.sf.net>

	* etc/main, etc/main.ja: Updated.

2013-11-02  Araki Ken  <arakiken@users.sf.net>

	* mlterm.1, README.ja, PROTOCOL: Updated.

	* ml_vt100_parser.c: ESC $ is available on non-ISO2022 encodings
	  such as UTF-8.

	* ml_vt100_parser.[ch], ml_term.h, x_screen_manager.c, x_screen.c,
	  x_main_config.[ch]:
	  "use_auto_detect" and "auto_detect_encodings" options are added.

2013-10-27  Araki Ken  <arakiken@users.sf.net>

	* README.androind: Updated.

	* android/build.sh, Android.mk: Support fribidi.

	* version.h.in: 3.3.0 -> 3.3.0post

2013-10-27  Araki Ken  <arakiken@users.sf.net>

	* 3.3.0 released.
	  (tag "rel-3_3_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.0.

2013-10-26  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c, x_screen.c:
	  OSC 5379 logging_msg, word_separators, use_alt_buffer,
	  use_ansi_colors, unicode_noconv_areas and allow_scp are moved from
	  x_screen.c to ml_vt100_parser.c.

	* MLTermPty.c:
	  - Minor fixes around some options.
	  - ONLY_USE_UNICODE_BOXDRAW_FONT is alwasy enabled.

2013-10-24  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Button3 motion event doesn't start selecting on libvte.

	* kik_conf.c: Illegal memory access is fixed.

2013-10-23  Araki Ken  <arakiken@users.sf.net>

	* x_screen_manager.c: config_saved() is called in x_screen_manager_startup()
	  on android.

	* x_screen.c:
	  - OSC 5379 snapshot rejects file names containing "..".
	  - OSC 5379 selected_text is removed.
	  - OSC 5379 paste is rejected.

	* x_screen.c, x_shortcut.[ch]: SWITCH_OSC52 shortcut is removed.
	  (Use "proto:allow_osc52=switch" instead.)

	* ml_vt100_parser.c, x_screen.c, x_main_config.c:
	  OSC 5379 scp is disabled by default, while "allow_scp" option is added.

	* ml_vt100_parser.c:
	  - The illegal memory access in ml_set_unicode_noconv_areas() is fixed.
	  - OSC 5383 requests challenge sequence.
